# canvas-filter

./: .gitignore  canvas-filter.py  local-install.sh  pyproject.toml
canvas_filter/: __init__.py
