[tool.poetry]
name = "canvas-filter"
version = "0.1.0"
description = ""
authors = ["Phillip Lord"]

[tool.poetry.dependencies]
python = "^3.6"
panflute = "^1.12.5"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
canvas-filter="canvas_filter:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
